@@ -2,10 +2,13 @@ package org.goobi.vocabulary;
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 import javax.xml.bind.annotation.XmlRootElement;
 
+import org.apache.commons.lang.StringUtils;
 import org.goobi.beans.DatabaseObject;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -29,6 +32,10 @@ public class Vocabulary implements Serializable, DatabaseObject {
     private String description;
     private List<VocabRecord> records = new ArrayList<>();
     private List<Definition> struct = new ArrayList<>();
+    List<VocabRecord> subList = null;
+
+    @JsonIgnore
+    private List<VocabRecord> filteredRecords = new ArrayList<>();
 
     @JsonIgnore
     private String url;
@@ -38,10 +45,14 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     @JsonIgnore
+    @Deprecated
     private String mainFieldName;
+
     @JsonIgnore
+    @Deprecated
     private String searchField;
     @JsonIgnore
+    @Deprecated
     private String order; // blank, ASC, DESC
     @JsonIgnore
     private int totalNumberOfRecords;
@@ -52,9 +63,19 @@ public class Vocabulary implements Serializable, DatabaseObject {
     @JsonIgnore
     private int pageNo = 0;
 
+    @JsonIgnore
+    private String sortfield = "idAsc";
+    @JsonIgnore
+    private boolean sortOrder;
+    @JsonIgnore
+    private Integer internalSortField;
+
+    @JsonIgnore
+    private String searchValue;
+
     public int getLastPageNumber() {
-        int ret = new Double(Math.floor(this.records.size() / numberOfRecordsPerPage)).intValue();
-        if (this.records.size() % numberOfRecordsPerPage == 0) {
+        int ret = Double.valueOf(Math.floor(filteredRecords.size() / numberOfRecordsPerPage)).intValue();
+        if (filteredRecords.size() % numberOfRecordsPerPage == 0) {
             ret--;
         }
         return ret;
@@ -69,7 +90,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     public boolean hasNextPage() {
-        return this.records.size() > numberOfRecordsPerPage;
+        return filteredRecords.size() > numberOfRecordsPerPage;
     }
 
     public boolean hasPreviousPage() {
@@ -85,19 +106,35 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     public int getSizeOfList() {
-        return records.size();
+        return filteredRecords.size();
     }
 
     public List<VocabRecord> getPaginatorList() {
-        List<VocabRecord> subList = new ArrayList<>();
+        return subList;
+    }
 
-        if (records.size() > (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage) {
-            subList = records.subList(pageNo * numberOfRecordsPerPage, (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage);
+    public void runFilter() {
+        filteredRecords.clear();
+        if (StringUtils.isNotBlank(searchValue)) {
+            for (VocabRecord rec : records) {
+                for (Field f : rec.getMainFields()) {
+                    if (StringUtils.isNotBlank(f.getValue())) {
+                        if (f.getValue().toLowerCase().contains(searchValue.toLowerCase())) {
+                            filteredRecords.add(rec);
+                            break;
+                        }
+                    }
+                }
+            }
         } else {
-            subList = records.subList(pageNo * numberOfRecordsPerPage, records.size());
+            filteredRecords = new ArrayList<>(records);
         }
 
-        return subList;
+        if (filteredRecords.size() > (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage) {
+            subList = filteredRecords.subList(pageNo * numberOfRecordsPerPage, (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage);
+        } else {
+            subList = filteredRecords.subList(pageNo * numberOfRecordsPerPage, filteredRecords.size());
+        }
     }
 
     public int getPageNo() {
@@ -122,7 +159,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
 
         if (!isFirstPage()) {
             this.pageNo--;
-            getPaginatorList();
+            runFilter();
         }
 
         return "";
@@ -132,7 +169,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
 
         if (!isLastPage()) {
             this.pageNo++;
-            getPaginatorList();
+            runFilter();
         }
 
         return "";
@@ -141,8 +178,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
     public String cmdMoveLast() {
         if (this.pageNo != getLastPageNumber()) {
             this.pageNo = getLastPageNumber();
-            getPaginatorList();
-
+            runFilter();
         }
         return "";
     }
@@ -151,7 +187,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
         if (neueSeite != null) {
             if ((this.pageNo != neueSeite - 1) && neueSeite > 0 && neueSeite <= getLastPageNumber() + 1) {
                 this.pageNo = neueSeite - 1;
-                getPaginatorList();
+                runFilter();
             }
         }
     }
@@ -160,4 +196,74 @@ public class Vocabulary implements Serializable, DatabaseObject {
         return null;
         //        return this.pageNo + 1;
     }
+
+    public List<Definition> getMainFields() {
+        List<Definition> answer = new ArrayList<>();
+        for (Definition def : struct) {
+            if (def.isTitleField()) {
+                answer.add(def);
+            }
+        }
+        return answer;
+    }
+
+    public void changeOrder() {
+        String field = null;
+        if (sortfield.endsWith("Asc")) {
+            field = sortfield.replace("Asc", "");
+            sortOrder = true;
+        } else {
+            field = sortfield.replace("Desc", "");
+            sortOrder = false;
+        }
+
+        if (field.equals("id")) {
+            internalSortField = null;
+        } else {
+            internalSortField = Integer.parseInt(field);
+        }
+        Collections.sort(records, recordComparator);
+        runFilter();
+    }
+
+    private Comparator<VocabRecord> recordComparator = new Comparator<VocabRecord>() {
+
+        @Override
+        public int compare(VocabRecord o1, VocabRecord o2) {
+            if (internalSortField == null) {
+                if (sortOrder) {
+                    return o1.getId().compareTo(o2.getId());
+                } else {
+                    return o2.getId().compareTo(o1.getId());
+                }
+            }
+            String value1 = null, value2 = null;
+
+            for (Field f : o1.getFields()) {
+                if (f.getDefinition().getId().intValue()==internalSortField.intValue()) {
+                    value1 = f.getValue().toLowerCase();
+                }
+            }
+            for (Field f : o2.getFields()) {
+                if (f.getDefinition().getId().intValue()==internalSortField.intValue()) {
+                    value2 = f.getValue().toLowerCase();
+                }
+            }
+            if (sortOrder) {
+                return value1.compareTo(value2);
+            } else {
+                return value2.compareTo(value1);
+            }
+        }
+    };
+
+    public void setSearchValue(String searchValue) {
+        if (this.searchValue == null || !this.searchValue.equals(searchValue)) {
+            pageNo=0;
+            this.searchValue = searchValue;
+        }
+
+
+    }
+
 }
